--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1> Odin Recipes </h1>
-        <a href"https://www.google.com/search?q=sushi+recipes&oq=sushi+recipe&aqs=chrome.0.0i433i512j69i57j0i512l8.2766j0j7&sourceid=chrome&ie=UTF-8">Sushi Recipe</a>
+        <a href="recipes/sushi.html">Sushi Recipe</a>
     </body>
 </html>
