--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1> Odin Recipes </h1>
-        <a href="recipes/sushi.html">Sushi Recipe</a>
+        <h1> A Small Collection of Recipes! </h1>
+      <ul> 
+           <li><a href="recipes/sushi.html">Sushi Recipe</a></li>
+           <li><a href="recipes/tofu.html"> Kimchi Soft Tofu Stew</a> </li>
+           <li><a href="recipes/eggplant.html> Fried Eggplant</a></li>
+      </ul>
     </body>
 </html>
