errors fixed pt.2

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1> A Small Collection of Recipes! </h1>
+        <h1> A Small Collection of My Favorite Recipes </h1>
+        <img src="https://preview.redd.it/9kvzgd1jqek51.jpg?width=960&crop=smart&auto=webp&s=fd95868b45a4d4ffefc997717b0d862240965a49"> </img>
+
       <ul> 
+          
            <li><a href="recipes/sushi.html">Sushi Recipe</a></li>
            <li><a href="recipes/tofu.html"> Kimchi Soft Tofu Stew</a> </li>
-           <li><a href="recipes/eggplant.html> Fried Eggplant</a></li>
+           <li><a href="recipes/eggplant.html"> Fried Eggplant </a></li>
+           
       </ul>
     </body>
 </html>
